# duckdb-acp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  Release.yml
duckdb_acp_core/: Cargo.toml
duckdb_acp_core/src/: ffi.rs  lib.rs  mcp_server.rs
src/: acp_extension.cpp
src/include/: acp_extension.hpp
test/sql/: acp.test
