[package]
name = "duckdb_acp_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Natural language to SQL using ACP - core library for DuckDB acp extension"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# ACP client
agent-client-protocol = "0.8.0"
tokio = { version = "1", features = ["rt", "macros", "process", "time", "sync", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"

# MCP server (rmcp)
rmcp = { version = "0.6.3", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }

# HTTP server for embedded MCP
axum = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI
libc = "0.2"

# Find executables in PATH
which = "7"

[profile.release]
lto = true
opt-level = "z"
